# thalida.com

./: .env.example  .gitignore  .htaccess  .infisical.json  .markdownlint.yaml  500.php  CNAME  Dockerfile  Gulpfile.js  Pipfile  README.md  adaptive-images.php  app.py  astro.config.mjs  bower.json  colors.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  error_log  gatsby-config.ts  gatsby-node.js  gh.php  index.html  index.php  justfile  main.py  manage.py  markdown_collections.py  markdown_posts.py  package-lock.json  package.json  posts_collection.py  proxy.php  pyproject.toml  super.css  super.head  super.js  weather.py  webpack.config.js  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
api/: .env  Dockerfile  Pipfile  api.py  github.py  helpers.py
app/: app.constants.js  app.js  app.module.js  app.route.js  app.scss  index.html  index.js
blog/: models.py
core/: models.py
demo/: Dockerfile  app.py
home/: models.py
includes/: database.php  db_config.php  functions.php  get_page.php  session_variables.php
modules/: _secrets.py  cookies.py  post_collection.py  utils.py  window.py  work.py
posts/: foo-bar-bat-cat.md  hello-world.md  hidden.md  post-2.mdx  post.mdx  template.md
posts_collection/: _collection-meta.md  aatemplate_2.md  hello-world.md  hidden.md  template.md  template_2.md  zztemplate_2.md
public/: robots.txt  site.webmanifest
src/: App.vue  app.scss  content.config.ts  main.js  utils.ts
svelte-app/: .gitignore  package-lock.json  package.json  rollup.config.js  svelte.config.cjs
(+689 files in other folders)
