[project]
name = "thalida-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.0",
    "django>=5.2.2",
    "django-cors-headers>=4.7.0",
    "django-simple-history>=3.8.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "wagtail>=7.0",
]

[dependency-groups]
dev = [
    "rust-just>=1.40.0",
    "pre-commit>=4.2.0",
]

[tool.ruff.lint]
extend-select = ["I", "F"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
known-first-party = ["api"]
